[tool.poetry]
name = "guardrails-sdk"
version = "0.1.0"
description = "A Python SDK for PII/Toxic and prompt inject."
authors = ["Viswateja Rayapaneni viswatejaster@gmail.com"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/tejadata/guardrails"
repository = "https://github.com/tejadata/guardrails"
keywords = ["guardrails", "sdk", "api", "python"]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.23.0"
pydantic = "^2.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"